--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
         </div>
         <div class="col-sm-8 circle-place">
-            <div class="circled bg-success">
+            <div class="circled ">
             </div>
         </div>
     </div>
@@ -50,14 +50,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" 
     crossorigin="anonymous"></script>
-    <!-- <script src="main.js"> </script> -->
-    <script >
-
-        $(document).ready(function() {
-
-            var obj = $(".circled");
-            console.log(obj)
-        })
-    </script>
+    <script src="main.js"> </script>
+    
 </body>
 </html>
